--- a/docs/migration/v1.28.0.md
+++ b/docs/migration/v1.28.0.md
@@ -1,11 +1,9 @@
 # Migrating to v1.28.0
 
-This version contain an overhaul of the API surface to improve its discoverability and its usage in a code editor. The aim was to reduce the number of top-level exports to make it easier to find the ones that matter. It also aligns it with the structure of the documentation.
+This version contains an overhaul of the API surface to improve its discoverability and its usage in a code editor. The aim was to reduce the number of top-level exports to make it easier to find the ones that matter. It also aligns it with the structure of the documentation.
 
 {% hint style="info" %}
 The previous API surface is still there, only deprecated. All of your existing extensions will continue to work. You will get helpful hints in your code editor to migrate your extension.
-
-We will provide some tools to automate the migration soon.
 {% endhint %}
 
 ## Clipboard
