--- a/docs/migration/v1.28.0.md
+++ b/docs/migration/v1.28.0.md
@@ -105,9 +105,6 @@ import { Keyboard } from "@raycast/api";
 // deprecated KeyboardShortcut
 Keyboard.Shortcut;
 
-// deprecated specialKeys
-Keyboard.specialKeys;
-
 // deprecated KeyModifier
 Keyboard.KeyModifier;
 
@@ -117,7 +114,7 @@ Keyboard.KeyEquivalent;
 
 ## Preferences
 
-We are deprecated the `preferences` constant because we found it to be error-prone. Instead, you should always use `getPreferenceValues()` which allows for a type-safe access with fallback to the defaults.
+We are deprecating the `preferences` constant because we found it to be error-prone. Instead, you should always use `getPreferenceValues()` which allows for a type-safe access with fallback to the defaults.
 
 ## User Interface
 
